--- a/number_generator/static/number_generator/style_generation_detail.css
+++ b/number_generator/static/number_generator/style_generation_detail.css
@@ -7,7 +7,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 200px;
+    margin-top: 100px;
     font-size: 2em;
     font-weight: bold;
     row-gap: 40px;
