--- a/number_generator/static/number_generator/style_home.css
+++ b/number_generator/static/number_generator/style_home.css
@@ -4,7 +4,7 @@ main {
 }
 
 #generation_form {
-    margin-top: 200px;
+    margin-top: 100px;
 }
 
 form {
